My updated resume 8 AUG 2020

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-teal"></i>Software Engineer</p>
           <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-teal"></i>Singapore</p>
           <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-teal"></i>gabe133@outlook.com</p>
-          <p><i class="fa fa-linkedin fa-fw w3-margin-right w3-large w3-text-teal"></i><a href="https://www.linkedin.com/in/gabriel-lee-05b89389" target="_blank">Open LinkedIn Profile</a></p>
+          <p><i class="fa fa-linkedin fa-fw w3-margin-right w3-large w3-text-teal"></i><a href="https://www.linkedin.com/in/gabriel-lee-05b89389" target="_blank">View LinkedIn Profile</a></p>
           <p><i class="fa fa-paperclip fa-fw w3-margin-right w3-large w3-text-teal"></i><a href="cv/gabriel-cv-online.pdf" target="_blank">Download CV</a></p>
           <hr>
 
